<resources>
    <string name="app_name">Minesweeper</string>
    <string name="EasyLevel">Level: Easy</string>
    <string name="MediumLevel">Level: Medium</string>
    <string name="HardLevel">Level: Hard</string>
    <string name="Easy">Level: Easy</string>
    <string name="Medium">Level: Medium</string>
    <string name="Hard">Level: Hard</string>
    <string name="StartNew">Start New Game</string>
    <string name="Win">"Well done, you won"</string>
    <string name="Lose">"Not this time, you lost"</string>
    <string name="TileAlreadyDiscoveredErrorMSG">"Tile is already discovered!!Can't put flag!!"</string>
    <string name="ExitApp">Exit App</string>
    <string name="NumOfFlags">Num Of Flags: </string>

<!--    <string name="EasyFirstPlace">1000</string>-->
<!--    <string name="EasySecondPlace">1000</string>-->
<!--    <string name="EasyThirdPlace">1000</string>-->
<!--    <string name="MediumFirstPlace">1000</string>-->
<!--    <string name="MediumSecondPlace">1000</string>-->
<!--    <string name="MediumThirdPlace">1000</string>-->
<!--    <string name="HardFirstPlace">1000</string>-->
<!--    <string name="HardSecondPlace">1000</string>-->
<!--    <string name="HardThirdPlace">1000</string>-->
    <string name="Highlights">Highlights: </string>
    <string name="Time"> time:</string>

<!--    <string name="HasTheUserBrokenARecord"> False</string>-->

</resources>