<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context="com.afeka.sm.Minesweeper.DifficultyChooserActivity">

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="180dp">
    <FrameLayout
    android:layout_width="400dp"
    android:layout_height="200dp"
    android:layout_weight="0.5"
    android:id="@+id/Fhighlight"
    android:animateLayoutChanges="true">
  </FrameLayout>
</ScrollView>

    <Button
        android:id="@+id/Easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="200dp"
        android:background="@color/ButtonColor"
        android:onClick="startGame"
        android:text="@string/Easy"
        />

    <Button
        android:id="@+id/Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_centerInParent="true"
        android:background="@color/ButtonColor"
        android:onClick="startGame"
        android:text="@string/Medium"
         />

    <Button
        android:id="@+id/Hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginVertical="@dimen/MarginVertical"
        android:background="@color/ButtonColor"
        android:onClick="startGame"
        android:text="@string/Hard"
        />

    <Button
        android:id="@+id/Highlights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerInParent="true"
        android:background="@color/ButtonColor"
        android:text="@string/Highlights"
        android:onClick="showHighlights"
        />

</RelativeLayout>
