<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Fhighlight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.afeka.sm.Minesweeper.HighlightsFragment">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="2dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LevelEasy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="@string/EasyLevel"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/TimeEasy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="@string/Time"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/EasyFirstPlaceName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="Omer" />

            <TextView
                android:id="@+id/EasyFirstPlaceTime"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="1000" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/EasySecondPlaceName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="niv" />

            <TextView
                android:id="@+id/EasySecondPlaceTime"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="1000" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/EasyThirdPlaceName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="asaf" />

            <TextView
                android:id="@+id/EasyThirdPlaceTime"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="200" />
        </TableRow>
    </TableLayout>


    <!--MEDUIM LEVEL TABLE-->
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="2dp"
        android:padding="1dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LevelMedium"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="@string/MediumLevel"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/TimeMedium"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="@string/Time"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="Omer" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="100" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="niv" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="150" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="asaf" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="200" />
        </TableRow>
    </TableLayout>


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:padding="1dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LevelHard"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="@string/HardLevel"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/TimeHard"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="@string/Time"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="Omer" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="100" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="niv" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="150" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="asaf" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:text="200" />
        </TableRow>
    </TableLayout>


    /


</FrameLayout>
